feat: Add improvements to the ui and category page; refactor: refactor frontend js

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/_variables.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/_variables.scss
@@ -2,7 +2,7 @@
 $primary: #020403;
 $secondary: #475456;
 $body-color: white;
-$body-bg: $primary;
+$body-bg: white;
 $borderWidth: 4px;
 $border-radius: 10px;
 $small-screen-query: 576px;
