--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_CategoryModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_CategoryModals.cshtml
@@ -5,11 +5,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="add-category-label">Add Category</h5>
+                    <h4 class="modal-title text-truncate text-center flex-grow-1" id="add-category-label">Add Category</h4>
                     <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="add-category-form" method="post">
+                    <form id="addCategory-form" method="post">
                         <input type="hidden" asp-for="FiscalPlanId" value="" id="addCategory_fiscalPlanId" />
                         <input type="hidden" asp-for="CategoryType" value="" id="addCategory_type" name="type" />
                         <div class="form-group">
@@ -35,14 +35,14 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="updateCategory-label"></h5>
+                    <h4 class="modal-title text-truncate text-center flex-grow-1" id="updateCategory-label"></h4>
                     <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="update-category-form" method="post">
+                    <form id="updateCategory-form" method="post">
                         <input type="hidden" asp-for="FiscalPlanId" value="" id="updateCategory_fiscalPlanId" />
                         <input type="hidden" asp-for="Id" value="" id="updateCategory_id"/>
-                        <input type="hidden" asp-for="CategoryType" value="" id="updateCategory_type" name="type" />
+                        <input type="hidden" asp-for="CategoryType" value="" id="updateCategory_type" name="Type" />
                         <input type="hidden" value ="" id="updateCategory_month"/>
                         <div class="form-group">
                             <label asp-for="Name" class="control-label"></label>
@@ -56,6 +56,30 @@
                         </div>
                         <div class="form-group mt-3 d-flex align-items-center justify-content-center">
                             <input type="submit" value="Edit" class="px-4 submit-btn" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="deleteCategory-modal" tabindex="-1" aria-labelledby="deleteCategory-label" aria-hidden="true" aria-modal="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title text-truncate text-center flex-grow-1" id="deleteCategory-label"></h4>
+                    <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Deleting this category will permanently remove all its associated transactions. This action cannot be undone.
+                        Are you sure you want to delete it?
+                    </p>
+                    <form id="deleteCategory-form" method="post">
+                        <input type="hidden" asp-for="Id" value="" id="deleteCategory_id" />
+                        <input type="hidden" asp-for="CategoryType" value="" id="deleteCategory_type" name="Type" />
+                        <div class="form-group mt-3 d-flex align-items-center justify-content-center">
+                            <input type="submit" value="Delete" class="px-4 submit-btn" />
                         </div>
                     </form>
                 </div>
